--- a/2022-classes-legacy-sin-track/02-frontend-developer/sesion-13-y-14-rock-wordle/package.json
+++ b/2022-classes-legacy-sin-track/02-frontend-developer/sesion-13-y-14-rock-wordle/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-toastify": "^9.1.1",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
