--- a/2023-track-01-febrero/morning-track/M3-backend-developer/movies-api/package.json
+++ b/2023-track-01-febrero/morning-track/M3-backend-developer/movies-api/package.json
@@ -11,14 +11,23 @@
     "format": "prettier --check --ignore-path .gitignore ./src",
     "format:fix": "prettier --write --ignore-path .gitignore ./src"
   },
-  "keywords": ["express", "mongo", "mongoose", "prettier", "eslint"],
+  "keywords": [
+    "express",
+    "mongo",
+    "mongoose",
+    "prettier",
+    "eslint"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.9.1"
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^6.9.1",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "eslint": "^8.34.0",
