--- a/2023-track-01-febrero/afternoon-track/M3-backend-developer/06-socket-game/server/package.json
+++ b/2023-track-01-febrero/afternoon-track/M3-backend-developer/06-socket-game/server/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "socket.io": "^4.6.1"
   }
